decreasoner/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> topformulas
Rule 1     topformulas -> topformula
Rule 2     topformulas -> topformulas topformula
Rule 3     topformula -> NUMBER COLON formula PERIOD
Rule 4     topformula -> NAME COLON formula PERIOD
Rule 5     topformula -> formula PERIOD
Rule 6     formula -> NAME
Rule 7     formula -> NUMBER
Rule 8     formula -> NAME LPAREN RPAREN
Rule 9     formula -> NAME LPAREN arguments RPAREN
Rule 10    formula -> formula PLUS formula
Rule 11    formula -> formula MINUS formula
Rule 12    formula -> formula TIMES formula
Rule 13    formula -> formula DIVIDE formula
Rule 14    formula -> formula RAISE formula
Rule 15    formula -> formula REMAINDER formula
Rule 16    formula -> PLUS formula
Rule 17    formula -> MINUS formula
Rule 18    formula -> formula LT formula
Rule 19    formula -> formula LE formula
Rule 20    formula -> formula EQ formula
Rule 21    formula -> formula NE formula
Rule 22    formula -> formula GE formula
Rule 23    formula -> formula GT formula
Rule 24    formula -> NOT formula
Rule 25    formula -> formula OR formula
Rule 26    formula -> formula AND formula
Rule 27    formula -> formula IMPLIES formula
Rule 28    formula -> formula EQUIV formula
Rule 29    formula -> LBRACKET names RBRACKET formula
Rule 30    formula -> LCURLY names RCURLY formula
Rule 31    formula -> LPAREN formula RPAREN
Rule 32    names -> NAME
Rule 33    names -> names COMMA NAME
Rule 34    arguments -> formula
Rule 35    arguments -> arguments COMMA formula

Terminals, with rules where they appear

AND                  : 26
COLON                : 3 4
COMMA                : 33 35
DIVIDE               : 13
EQ                   : 20
EQUIV                : 28
GE                   : 22
GT                   : 23
IMPLIES              : 27
LBRACKET             : 29
LCURLY               : 30
LE                   : 19
LPAREN               : 8 9 31
LT                   : 18
MINUS                : 11 17
NAME                 : 4 6 8 9 32 33
NE                   : 21
NOT                  : 24
NUMBER               : 3 7
OR                   : 25
PERIOD               : 3 4 5
PLUS                 : 10 16
RAISE                : 14
RBRACKET             : 29
RCURLY               : 30
REMAINDER            : 15
RPAREN               : 8 9 31
TIMES                : 12
error                : 

Nonterminals, with rules where they appear

arguments            : 9 35
formula              : 3 4 5 10 10 11 11 12 12 13 13 14 14 15 15 16 17 18 18 19 19 20 20 21 21 22 22 23 23 24 25 25 26 26 27 27 28 28 29 30 31 34 35
names                : 29 30 33
topformula           : 1 2
topformulas          : 2 0

Parsing method: LALR

state 0

    (0) S' -> . topformulas
    (1) topformulas -> . topformula
    (2) topformulas -> . topformulas topformula
    (3) topformula -> . NUMBER COLON formula PERIOD
    (4) topformula -> . NAME COLON formula PERIOD
    (5) topformula -> . formula PERIOD
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NUMBER          shift and go to state 1
    NAME            shift and go to state 10
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 8
    topformulas                    shift and go to state 9
    topformula                     shift and go to state 6

state 1

    (3) topformula -> NUMBER . COLON formula PERIOD
    (7) formula -> NUMBER .

    COLON           shift and go to state 12
    PERIOD          reduce using rule 7 (formula -> NUMBER .)
    PLUS            reduce using rule 7 (formula -> NUMBER .)
    MINUS           reduce using rule 7 (formula -> NUMBER .)
    TIMES           reduce using rule 7 (formula -> NUMBER .)
    DIVIDE          reduce using rule 7 (formula -> NUMBER .)
    RAISE           reduce using rule 7 (formula -> NUMBER .)
    REMAINDER       reduce using rule 7 (formula -> NUMBER .)
    LT              reduce using rule 7 (formula -> NUMBER .)
    LE              reduce using rule 7 (formula -> NUMBER .)
    EQ              reduce using rule 7 (formula -> NUMBER .)
    NE              reduce using rule 7 (formula -> NUMBER .)
    GE              reduce using rule 7 (formula -> NUMBER .)
    GT              reduce using rule 7 (formula -> NUMBER .)
    OR              reduce using rule 7 (formula -> NUMBER .)
    AND             reduce using rule 7 (formula -> NUMBER .)
    IMPLIES         reduce using rule 7 (formula -> NUMBER .)
    EQUIV           reduce using rule 7 (formula -> NUMBER .)


state 2

    (29) formula -> LBRACKET . names RBRACKET formula
    (32) names -> . NAME
    (33) names -> . names COMMA NAME

    NAME            shift and go to state 13

    names                          shift and go to state 14

state 3

    (30) formula -> LCURLY . names RCURLY formula
    (32) names -> . NAME
    (33) names -> . names COMMA NAME

    NAME            shift and go to state 13

    names                          shift and go to state 15

state 4

    (17) formula -> MINUS . formula
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 17

state 5

    (16) formula -> PLUS . formula
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 19

state 6

    (1) topformulas -> topformula .

    NUMBER          reduce using rule 1 (topformulas -> topformula .)
    NAME            reduce using rule 1 (topformulas -> topformula .)
    PLUS            reduce using rule 1 (topformulas -> topformula .)
    MINUS           reduce using rule 1 (topformulas -> topformula .)
    NOT             reduce using rule 1 (topformulas -> topformula .)
    LBRACKET        reduce using rule 1 (topformulas -> topformula .)
    LCURLY          reduce using rule 1 (topformulas -> topformula .)
    LPAREN          reduce using rule 1 (topformulas -> topformula .)
    $end            reduce using rule 1 (topformulas -> topformula .)


state 7

    (31) formula -> LPAREN . formula RPAREN
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 20

state 8

    (5) topformula -> formula . PERIOD
    (10) formula -> formula . PLUS formula
    (11) formula -> formula . MINUS formula
    (12) formula -> formula . TIMES formula
    (13) formula -> formula . DIVIDE formula
    (14) formula -> formula . RAISE formula
    (15) formula -> formula . REMAINDER formula
    (18) formula -> formula . LT formula
    (19) formula -> formula . LE formula
    (20) formula -> formula . EQ formula
    (21) formula -> formula . NE formula
    (22) formula -> formula . GE formula
    (23) formula -> formula . GT formula
    (25) formula -> formula . OR formula
    (26) formula -> formula . AND formula
    (27) formula -> formula . IMPLIES formula
    (28) formula -> formula . EQUIV formula

    PERIOD          shift and go to state 27
    PLUS            shift and go to state 31
    MINUS           shift and go to state 35
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 25
    RAISE           shift and go to state 37
    REMAINDER       shift and go to state 34
    LT              shift and go to state 29
    LE              shift and go to state 23
    EQ              shift and go to state 26
    NE              shift and go to state 36
    GE              shift and go to state 24
    GT              shift and go to state 30
    OR              shift and go to state 22
    AND             shift and go to state 21
    IMPLIES         shift and go to state 32
    EQUIV           shift and go to state 33


state 9

    (0) S' -> topformulas .
    (2) topformulas -> topformulas . topformula
    (3) topformula -> . NUMBER COLON formula PERIOD
    (4) topformula -> . NAME COLON formula PERIOD
    (5) topformula -> . formula PERIOD
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NUMBER          shift and go to state 1
    NAME            shift and go to state 10
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 8
    topformula                     shift and go to state 38

state 10

    (4) topformula -> NAME . COLON formula PERIOD
    (6) formula -> NAME .
    (8) formula -> NAME . LPAREN RPAREN
    (9) formula -> NAME . LPAREN arguments RPAREN

    COLON           shift and go to state 39
    PERIOD          reduce using rule 6 (formula -> NAME .)
    PLUS            reduce using rule 6 (formula -> NAME .)
    MINUS           reduce using rule 6 (formula -> NAME .)
    TIMES           reduce using rule 6 (formula -> NAME .)
    DIVIDE          reduce using rule 6 (formula -> NAME .)
    RAISE           reduce using rule 6 (formula -> NAME .)
    REMAINDER       reduce using rule 6 (formula -> NAME .)
    LT              reduce using rule 6 (formula -> NAME .)
    LE              reduce using rule 6 (formula -> NAME .)
    EQ              reduce using rule 6 (formula -> NAME .)
    NE              reduce using rule 6 (formula -> NAME .)
    GE              reduce using rule 6 (formula -> NAME .)
    GT              reduce using rule 6 (formula -> NAME .)
    OR              reduce using rule 6 (formula -> NAME .)
    AND             reduce using rule 6 (formula -> NAME .)
    IMPLIES         reduce using rule 6 (formula -> NAME .)
    EQUIV           reduce using rule 6 (formula -> NAME .)
    LPAREN          shift and go to state 40


state 11

    (24) formula -> NOT . formula
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 41

state 12

    (3) topformula -> NUMBER COLON . formula PERIOD
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 42

state 13

    (32) names -> NAME .

    RCURLY          reduce using rule 32 (names -> NAME .)
    COMMA           reduce using rule 32 (names -> NAME .)
    RBRACKET        reduce using rule 32 (names -> NAME .)


state 14

    (29) formula -> LBRACKET names . RBRACKET formula
    (33) names -> names . COMMA NAME

    RBRACKET        shift and go to state 44
    COMMA           shift and go to state 43


state 15

    (30) formula -> LCURLY names . RCURLY formula
    (33) names -> names . COMMA NAME

    RCURLY          shift and go to state 45
    COMMA           shift and go to state 43


state 16

    (7) formula -> NUMBER .

    PLUS            reduce using rule 7 (formula -> NUMBER .)
    MINUS           reduce using rule 7 (formula -> NUMBER .)
    TIMES           reduce using rule 7 (formula -> NUMBER .)
    DIVIDE          reduce using rule 7 (formula -> NUMBER .)
    RAISE           reduce using rule 7 (formula -> NUMBER .)
    REMAINDER       reduce using rule 7 (formula -> NUMBER .)
    LT              reduce using rule 7 (formula -> NUMBER .)
    LE              reduce using rule 7 (formula -> NUMBER .)
    EQ              reduce using rule 7 (formula -> NUMBER .)
    NE              reduce using rule 7 (formula -> NUMBER .)
    GE              reduce using rule 7 (formula -> NUMBER .)
    GT              reduce using rule 7 (formula -> NUMBER .)
    OR              reduce using rule 7 (formula -> NUMBER .)
    AND             reduce using rule 7 (formula -> NUMBER .)
    IMPLIES         reduce using rule 7 (formula -> NUMBER .)
    EQUIV           reduce using rule 7 (formula -> NUMBER .)
    PERIOD          reduce using rule 7 (formula -> NUMBER .)
    RPAREN          reduce using rule 7 (formula -> NUMBER .)
    COMMA           reduce using rule 7 (formula -> NUMBER .)


state 17

    (17) formula -> MINUS formula .
    (10) formula -> formula . PLUS formula
    (11) formula -> formula . MINUS formula
    (12) formula -> formula . TIMES formula
    (13) formula -> formula . DIVIDE formula
    (14) formula -> formula . RAISE formula
    (15) formula -> formula . REMAINDER formula
    (18) formula -> formula . LT formula
    (19) formula -> formula . LE formula
    (20) formula -> formula . EQ formula
    (21) formula -> formula . NE formula
    (22) formula -> formula . GE formula
    (23) formula -> formula . GT formula
    (25) formula -> formula . OR formula
    (26) formula -> formula . AND formula
    (27) formula -> formula . IMPLIES formula
    (28) formula -> formula . EQUIV formula

    PLUS            reduce using rule 17 (formula -> MINUS formula .)
    MINUS           reduce using rule 17 (formula -> MINUS formula .)
    LT              reduce using rule 17 (formula -> MINUS formula .)
    LE              reduce using rule 17 (formula -> MINUS formula .)
    EQ              reduce using rule 17 (formula -> MINUS formula .)
    NE              reduce using rule 17 (formula -> MINUS formula .)
    GE              reduce using rule 17 (formula -> MINUS formula .)
    GT              reduce using rule 17 (formula -> MINUS formula .)
    OR              reduce using rule 17 (formula -> MINUS formula .)
    AND             reduce using rule 17 (formula -> MINUS formula .)
    IMPLIES         reduce using rule 17 (formula -> MINUS formula .)
    EQUIV           reduce using rule 17 (formula -> MINUS formula .)
    PERIOD          reduce using rule 17 (formula -> MINUS formula .)
    RPAREN          reduce using rule 17 (formula -> MINUS formula .)
    COMMA           reduce using rule 17 (formula -> MINUS formula .)
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 25
    RAISE           shift and go to state 37
    REMAINDER       shift and go to state 34

  ! TIMES           [ reduce using rule 17 (formula -> MINUS formula .) ]
  ! DIVIDE          [ reduce using rule 17 (formula -> MINUS formula .) ]
  ! RAISE           [ reduce using rule 17 (formula -> MINUS formula .) ]
  ! REMAINDER       [ reduce using rule 17 (formula -> MINUS formula .) ]
  ! PLUS            [ shift and go to state 31 ]
  ! MINUS           [ shift and go to state 35 ]
  ! LT              [ shift and go to state 29 ]
  ! LE              [ shift and go to state 23 ]
  ! EQ              [ shift and go to state 26 ]
  ! NE              [ shift and go to state 36 ]
  ! GE              [ shift and go to state 24 ]
  ! GT              [ shift and go to state 30 ]
  ! OR              [ shift and go to state 22 ]
  ! AND             [ shift and go to state 21 ]
  ! IMPLIES         [ shift and go to state 32 ]
  ! EQUIV           [ shift and go to state 33 ]


state 18

    (6) formula -> NAME .
    (8) formula -> NAME . LPAREN RPAREN
    (9) formula -> NAME . LPAREN arguments RPAREN

    PLUS            reduce using rule 6 (formula -> NAME .)
    MINUS           reduce using rule 6 (formula -> NAME .)
    TIMES           reduce using rule 6 (formula -> NAME .)
    DIVIDE          reduce using rule 6 (formula -> NAME .)
    RAISE           reduce using rule 6 (formula -> NAME .)
    REMAINDER       reduce using rule 6 (formula -> NAME .)
    LT              reduce using rule 6 (formula -> NAME .)
    LE              reduce using rule 6 (formula -> NAME .)
    EQ              reduce using rule 6 (formula -> NAME .)
    NE              reduce using rule 6 (formula -> NAME .)
    GE              reduce using rule 6 (formula -> NAME .)
    GT              reduce using rule 6 (formula -> NAME .)
    OR              reduce using rule 6 (formula -> NAME .)
    AND             reduce using rule 6 (formula -> NAME .)
    IMPLIES         reduce using rule 6 (formula -> NAME .)
    EQUIV           reduce using rule 6 (formula -> NAME .)
    PERIOD          reduce using rule 6 (formula -> NAME .)
    RPAREN          reduce using rule 6 (formula -> NAME .)
    COMMA           reduce using rule 6 (formula -> NAME .)
    LPAREN          shift and go to state 40


state 19

    (16) formula -> PLUS formula .
    (10) formula -> formula . PLUS formula
    (11) formula -> formula . MINUS formula
    (12) formula -> formula . TIMES formula
    (13) formula -> formula . DIVIDE formula
    (14) formula -> formula . RAISE formula
    (15) formula -> formula . REMAINDER formula
    (18) formula -> formula . LT formula
    (19) formula -> formula . LE formula
    (20) formula -> formula . EQ formula
    (21) formula -> formula . NE formula
    (22) formula -> formula . GE formula
    (23) formula -> formula . GT formula
    (25) formula -> formula . OR formula
    (26) formula -> formula . AND formula
    (27) formula -> formula . IMPLIES formula
    (28) formula -> formula . EQUIV formula

    PLUS            reduce using rule 16 (formula -> PLUS formula .)
    MINUS           reduce using rule 16 (formula -> PLUS formula .)
    LT              reduce using rule 16 (formula -> PLUS formula .)
    LE              reduce using rule 16 (formula -> PLUS formula .)
    EQ              reduce using rule 16 (formula -> PLUS formula .)
    NE              reduce using rule 16 (formula -> PLUS formula .)
    GE              reduce using rule 16 (formula -> PLUS formula .)
    GT              reduce using rule 16 (formula -> PLUS formula .)
    OR              reduce using rule 16 (formula -> PLUS formula .)
    AND             reduce using rule 16 (formula -> PLUS formula .)
    IMPLIES         reduce using rule 16 (formula -> PLUS formula .)
    EQUIV           reduce using rule 16 (formula -> PLUS formula .)
    PERIOD          reduce using rule 16 (formula -> PLUS formula .)
    RPAREN          reduce using rule 16 (formula -> PLUS formula .)
    COMMA           reduce using rule 16 (formula -> PLUS formula .)
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 25
    RAISE           shift and go to state 37
    REMAINDER       shift and go to state 34

  ! TIMES           [ reduce using rule 16 (formula -> PLUS formula .) ]
  ! DIVIDE          [ reduce using rule 16 (formula -> PLUS formula .) ]
  ! RAISE           [ reduce using rule 16 (formula -> PLUS formula .) ]
  ! REMAINDER       [ reduce using rule 16 (formula -> PLUS formula .) ]
  ! PLUS            [ shift and go to state 31 ]
  ! MINUS           [ shift and go to state 35 ]
  ! LT              [ shift and go to state 29 ]
  ! LE              [ shift and go to state 23 ]
  ! EQ              [ shift and go to state 26 ]
  ! NE              [ shift and go to state 36 ]
  ! GE              [ shift and go to state 24 ]
  ! GT              [ shift and go to state 30 ]
  ! OR              [ shift and go to state 22 ]
  ! AND             [ shift and go to state 21 ]
  ! IMPLIES         [ shift and go to state 32 ]
  ! EQUIV           [ shift and go to state 33 ]


state 20

    (31) formula -> LPAREN formula . RPAREN
    (10) formula -> formula . PLUS formula
    (11) formula -> formula . MINUS formula
    (12) formula -> formula . TIMES formula
    (13) formula -> formula . DIVIDE formula
    (14) formula -> formula . RAISE formula
    (15) formula -> formula . REMAINDER formula
    (18) formula -> formula . LT formula
    (19) formula -> formula . LE formula
    (20) formula -> formula . EQ formula
    (21) formula -> formula . NE formula
    (22) formula -> formula . GE formula
    (23) formula -> formula . GT formula
    (25) formula -> formula . OR formula
    (26) formula -> formula . AND formula
    (27) formula -> formula . IMPLIES formula
    (28) formula -> formula . EQUIV formula

    RPAREN          shift and go to state 46
    PLUS            shift and go to state 31
    MINUS           shift and go to state 35
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 25
    RAISE           shift and go to state 37
    REMAINDER       shift and go to state 34
    LT              shift and go to state 29
    LE              shift and go to state 23
    EQ              shift and go to state 26
    NE              shift and go to state 36
    GE              shift and go to state 24
    GT              shift and go to state 30
    OR              shift and go to state 22
    AND             shift and go to state 21
    IMPLIES         shift and go to state 32
    EQUIV           shift and go to state 33


state 21

    (26) formula -> formula AND . formula
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 47

state 22

    (25) formula -> formula OR . formula
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 48

state 23

    (19) formula -> formula LE . formula
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7

    formula                        shift and go to state 49

state 24

    (22) formula -> formula GE . formula
    (6) formula -> . NAME
    (7) formula -> . NUMBER
    (8) formula -> . NAME LPAREN RPAREN
    (9) formula -> . NAME LPAREN arguments RPAREN
    (10) formula -> . formula PLUS formula
    (11) formula -> . formula MINUS formula
    (12) formula -> . formula TIMES formula
    (13) formula -> . formula DIVIDE formula
    (14) formula -> . formula RAISE formula
    (15) formula -> . formula REMAINDER formula
    (16) formula -> . PLUS formula
    (17) formula -> . MINUS formula
    (18) formula -> . formula LT formula
    (19) formula -> . formula LE formula
    (20) formula -> . formula EQ formula
    (21) formula -> . formula NE formula
    (22) formula -> . formula GE formula
    (23) formula -> . formula GT formula
    (24) formula -> . NOT formula
    (25) formula -> . formula OR formula
    (26) formula -> . formula AND formula
    (27) formula -> . formula IMPLIES formula
    (28) formula -> . formula EQUIV formula
    (29) formula -> . LBRACKET names RBRACKET formula
    (30) formula -> . LCURLY names RCURLY formula
    (31) formula -> . LPAREN formula RPAREN

    NAME            shift and go to state 18
    NUMBER          shift and go to state 16
    PLUS            shift and go to state 5
    MINUS           shift and go to state 4
    NOT             shift and go to state 11
    LBRACKET        shift and go to state 2
    LCURLY          shift and go to state 3
    LPAREN          shift and go to state 7
